--- a/presentation/cadec-2017-reactive-master/index.html
+++ b/presentation/cadec-2017-reactive-master/index.html
@@ -592,6 +592,12 @@ public class PersonController {
 						<li class="fragment">Rx is a valuble tool in the toolbox for the enterprise java developer.</li>
 					</ul>
 				</section>
+
+				<section>
+					<h3>Example Service</h3>
+					<img style="width: 80%; height: 80%" src="images/bookstore_complete.png"/>
+				</section>
+
 			</div>
 		</div>
 
